# thorix

./: CLAUDE.md  Makefile  README.md  docker-compose.solo.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: on-main.yml
docs/: running_tests.md  thor_endpoints.md
src/thorix/: errors.py  networks.py
src/thorix/client/: thor_client.py
src/thorix/config/: http_config.py
src/thorix/http/: http_async.py  http_sync.py  retry.py  transport.py
src/thorix/schemas/: account.py  clause.py  mappers.py  primitives.py  thorest_model.py  transactions.py
src/thorix/thorest/: accounts.py
src/thorix/types/: account.py  primitives.py
tests/solo/client/: test_thor_client.py
tests/solo/thorest/: test_accounts_api.py
tests/unit/config/: test_http_config.py
tests/unit/http/: test_http_async.py  test_http_sync.py  test_retry_async.py  test_retry_sync.py
tests/unit/schemas/: test_account_schema.py  test_clause_schema.py  test_primitives_schema.py  test_transaction_meta_schema.py  test_transaction_schema.py
tests/unit/thorest/: test_account_api.py
tests/unit/types/: test_primitives.py
