[project]
name = "thorix"
version = "0.1.0"
description = "Python SDK for VeChain"
authors = [{ name = "Clayton Neal" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]
keywords = [
    "vechain",
    "thor",
    "blockchain",
    "web3",
    "sdk",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/claytonneal/thorix"
Repository = "https://github.com/claytonneal/thorix"
Issues = "https://github.com/claytonneal/thorix/issues"

[tool.poetry]
packages = [{ include = "thorix", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --cov=thorix --cov-report=term-missing"
